--- a/style.css
+++ b/style.css
@@ -25,9 +25,8 @@
 #tentativas{
     width: 35vw;
     height: 80vh;
-    max-height: 80vh;
     background-color: rgba(133, 131, 131, 0.596);
-    overflow: auto;
+    overflow-y: auto;
     border-radius: 0.5vw;
     font-weight: 700;
     border: 0.8px solid black;
